# oqd-artiq

./: .gitignore  .gitmodules  README.md  README.rst  flake.nix  mkdocs.yaml  mkdocs.yml  pyproject.toml  sync_ndsp.sh
.github/workflows/: test.yml
contrib/spectrum-ndsp/: README.md  requirements.txt
contrib/spectrum-ndsp/.github/workflows/: format.yml
contrib/spectrum-ndsp/docs/stylesheets/: headers.css
contrib/spectrum-ndsp/src/artiq/: __init__.py
contrib/spectrum-ndsp/src/artiq/frontend/: __init__.py
contrib/spectrum-ndsp/tests/: test_template.py
doc/manual/: aqctl_awg.md
docs/: artiq-integration.md  index.md
experiments/: device_db.py  simple_exp.artiq.py
